--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,26 +9,9 @@ layout: default
 
   {{ content }}
 
-  {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
-    <ul class="post-list">
-      {%- for post in site.posts -%}
-      <li>
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-        <h3>
-          <a class="post-link" href="{{ post.url | relative_url }}">
-            {{ post.title | escape }}
-          </a>
-        </h3>
-        {%- if site.show_excerpts -%}
-          {{ post.excerpt }}
-        {%- endif -%}
-      </li>
-      {%- endfor -%}
-    </ul>
-
-  {%- endif -%}
+  <h2 class="post-list-heading">Welcome</h2>
+  <p>The goal of this site is to prototype automated taxonomic site generation for collected caterpillars. All caterpillar content and information present is solely for demonstration purposes, and not intended for reference.</p>
+  <p>Data obtained from Dyer, L.A. and G.L. Gentry. 2002. Caterpillars and parasitoids of a tropical lowland wet forest. http://www.caterpillars.org. Accessed: 04-Feb-2024.</p>
 
 </div>
 
