--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,12 +6,27 @@ layout: default
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
+  {% assign species = site.pages | where_exp: 'page', 'page.title' %}
 
   {{ content }}
 
   <h2 class="post-list-heading">Welcome</h2>
   <p>The goal of this site is to prototype automated taxonomic site generation for collected caterpillars. All caterpillar content and information present is solely for demonstration purposes, and not intended for reference.</p>
   <p>Data obtained from Dyer, L.A. and G.L. Gentry. 2002. Caterpillars and parasitoids of a tropical lowland wet forest. http://www.caterpillars.org. Accessed: 04-Feb-2024.</p>
+
+  <h2 class="post-list-heading">Species</h2>
+  <ul class="post-list">
+    {%- for page in species -%}
+      {%- if page.categories contains 'species' -%}
+      <li>
+        <h3>
+          <a class="post-link" href="{{ page.url | relative_url }}">
+            {{ page.title | escape }}
+          </a>
+        </h3>
+      {%- endif -%}
+    {%- endfor -%}
+  </ul>
 
 </div>
 
