--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,6 +7,10 @@ layout: default
     <h1 class="post-title">{{ page.title | escape }}</h1>
   </header>
 
+  <section id="left-column" class="sidebar">
+    {% include layout/menu.html %}
+  </section>
+
   <div class="post-content">
     {{ content }}
   </div>
