Add lightbox popup to image pages
Taken from https://jekyllcodex.org/without-plugin/lightbox/#

--- a/_includes/image-gallery.html
+++ b/_includes/image-gallery.html
@@ -17,3 +17,6 @@
       {% endif %}
     {% endif %}
   {% endfor %}</ul>
+
+<link rel="stylesheet" href="{{ "/assets/css/lightbox.css" | relative_url }}">
+<script type="text/javascript" src="{{ "/assets/js/lightbox.js" | relative_url }}">
