--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,6 +16,7 @@ layout: default
 
   <h2 class="post-list-heading">Welcome</h2>
   <p>The goal of this site is to prototype automated taxonomic site generation for collected caterpillars. All caterpillar content and information present is solely for demonstration purposes, and not intended for reference.</p>
+  <p>For associated files and generation instructions, see the <a href="https://github.com/hinerm/caterpillars/">GitHub repository</a>.</p>
   <p>Data obtained from Dyer, L.A. and G.L. Gentry. 2002. Caterpillars and parasitoids of a tropical lowland wet forest. http://www.caterpillars.org. Accessed: 04-Feb-2024.</p>
 
   <h2 class="post-list-heading">Species</h2>
