--- a/assets/css/lightbox.css
+++ b/assets/css/lightbox.css
@@ -12,6 +12,7 @@
 #lightbox .img img {opacity: 0; pointer-events: none; width: auto;}
 @media screen and (min-width: 1200px) {
     #lightbox .img {
+        height: 95%;
         max-width: 1200px;
     }
 }
