Differentiate menu widths by depth

--- a/_includes/menu/section.html
+++ b/_includes/menu/section.html
@@ -16,7 +16,7 @@
 {%- else -%}
 <summary>{{include.title}}</summary>
 {%- endif -%}
-<ul>
+<ul style="border-left: {{include.border}}px solid gray;">
 
 {%- comment -%}
 # vi:syntax=liquid
