--- a/_includes/layout/menu.html
+++ b/_includes/layout/menu.html
@@ -3,22 +3,22 @@
     <h3>Taxonomy</h3>
     <ul>
       {% include menu/section.html title="Insecta" %}
-        {% include menu/section.html title="Lepidoptera" %}
-          {%include menu/section.html title="Noctuoidea" %}
-            {%include menu/section.html title="Erebinae" %}
-              {%include menu/section.html title="Catocalini" %}
-                {%include menu/section.html title="Euclystis" %}
+        {% include menu/section.html title="Lepidoptera" border="4" %}
+          {%include menu/section.html title="Noctuoidea" border="2.5" %}
+            {%include menu/section.html title="Erebinae" border="2" %}
+              {%include menu/section.html title="Catocalini" border="1.5" %}
+                {%include menu/section.html title="Euclystis" border="1" %}
                 <li><a href="/caterpillars/species/euclystis-guerini-guenee.html">Euclystis guerini Guenee</a></li>
                 {%include menu/section-end.html %}
               {%include menu/section-end.html %}
             {%include menu/section-end.html %}
           {%include menu/section-end.html %}
-          {%include menu/section.html title="Hesperioidea" %}
-            {%include menu/section.html title="Hesperiidae" %}
-              {%include menu/section.html title="Telemiades" %}
+          {%include menu/section.html title="Hesperioidea" border="2.5" %}
+            {%include menu/section.html title="Hesperiidae" border="2" %}
+              {%include menu/section.html title="Telemiades" border="1" %}
                 <li><a href="/caterpillars/species/telemiades-antiope.html">Telemiades Antiope</a></li>
               {%include menu/section-end.html %}
-              {%include menu/section.html title="Entheus" %}
+              {%include menu/section.html title="Entheus" border="1" %}
                 <li><a href="/caterpillars/species/entheus-matho.html">Entheus Matho</a></li>
               {%include menu/section-end.html %}
             {%include menu/section-end.html %}
