Auto-generate species pages

--- a/_includes/layout/menu.html
+++ b/_includes/layout/menu.html
@@ -16,7 +16,7 @@
           {%include menu/section.html title="Hesperioidea" border="2.5" %}
             {%include menu/section.html title="Hesperiidae" border="2" %}
               {%include menu/section.html title="Telemiades" genus="Telemiades" border="1" %}
-                <li><a href="/caterpillars/species/telemiades-antiope.html">Telemiades Antiope</a></li>
+                <li><a href="/caterpillars/species/telemiades-nr-antiope.html">Telemiades nr. Antiope</a></li>
               {%include menu/section-end.html %}
               {%include menu/section.html title="Entheus" genus="Entheus" border="1" %}
                 <li><a href="/caterpillars/species/entheus-matho.html">Entheus Matho</a></li>
