--- a/_includes/layout/menu.html
+++ b/_includes/layout/menu.html
@@ -2,12 +2,12 @@
   <div class="menu">
     <h3>Taxonomy</h3>
     <ul>
-      {% include menu/section.html title="Insecta" %}
+      {% include menu/section.html title="Insecta" open="True" %}
         {% include menu/section.html title="Lepidoptera" border="4" %}
           {%include menu/section.html title="Noctuoidea" border="2.5" %}
             {%include menu/section.html title="Erebinae" border="2" %}
               {%include menu/section.html title="Catocalini" border="1.5" %}
-                {%include menu/section.html title="Euclystis" border="1" %}
+                {%include menu/section.html title="Euclystis" genus="Euclystis" border="1" %}
                 <li><a href="/caterpillars/species/euclystis-guerini-guenee.html">Euclystis guerini Guenee</a></li>
                 {%include menu/section-end.html %}
               {%include menu/section-end.html %}
@@ -15,10 +15,10 @@
           {%include menu/section-end.html %}
           {%include menu/section.html title="Hesperioidea" border="2.5" %}
             {%include menu/section.html title="Hesperiidae" border="2" %}
-              {%include menu/section.html title="Telemiades" border="1" %}
+              {%include menu/section.html title="Telemiades" genus="Telemiades" border="1" %}
                 <li><a href="/caterpillars/species/telemiades-antiope.html">Telemiades Antiope</a></li>
               {%include menu/section-end.html %}
-              {%include menu/section.html title="Entheus" border="1" %}
+              {%include menu/section.html title="Entheus" genus="Entheus" border="1" %}
                 <li><a href="/caterpillars/species/entheus-matho.html">Entheus Matho</a></li>
               {%include menu/section-end.html %}
             {%include menu/section-end.html %}
@@ -34,6 +34,8 @@
 {%- capture current-page -%} <a class="current-page"> {%- endcapture -%}
 
 {{ main-menu | replace: page-link, current-page }}
+
+<script type="text/javascript" src="{{ "/assets/js/menu.js" | relative_url }}"></script>
 
 {%- comment -%}
 # vi:syntax=liquid
