--- a/_includes/menu/section.html
+++ b/_includes/menu/section.html
@@ -1,8 +1,8 @@
 <li>
 {%- if {{include.open}} -%}
 <details open>
-{%- elsif {{include.genus}} -%}
-<details id="{{include.genus}}">
+{%- elsif {{include.taxon}} -%}
+<details id="{{include.taxon}}">
 {%- else -%}
 <details>
 {%- endif -%}
